--- a/index.html
+++ b/index.html
@@ -457,14 +457,17 @@
 	        		<div class="col-md-6 col-md-offset-3 wow animated zoomInDown" id= "heading-text">
 	        			<h3 id="story">StoryBoard</h3>
 	                	<hr class= "full">
-	                	<br/>
+	                	</br>
+	                	<img src="2.jpg" width="640" height="480" align="center-block">
 	        		</div>
 		        </div>
 			    	<!-- main_content -->
 			    	<div class="row about-us-text">
-					<div class="col-md-8 col-md-offset-2">
-						<p class="text-center">Video</p></br>
-					<video src="video.mp4" width="640" height="480" controls=""> </video>	
+					<div class="col-md-8 col-md-offset-3">
+
+						<h3 class="text-center">VIDEO</h3>
+					
+					<video src="video.mp4" width="640" height="480" controls="" align> </video>	
 
 						
 					</div>
